# learn-ansible

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
02-adhoc-commands/: inventory.ini  playbook.yml
03-playbooks/: Vagrantfile  inventory.ini
04-nodejs-role/app/: package.json
04-nodejs-role/roles/nodejs/tasks/: main.yml
05-vault-and-roles/vars/: api_key.yml
07-molecule-testing/00-galaxy/: ansible.cfg
07-molecule-testing/03-yamllint/: lint-example.yml
07-molecule-testing/05-ansible-lint/: main.yml
07-molecule-testing/06-molecule-role/: README.md
07-molecule-testing/06-molecule-role/myrole/tasks/: main.yml
08-molecule-playbooks/01-molecule-playbook/molecule/default/: converge.yml  molecule.yml  verify.yml
adhoc/: Vagrantfile  ansible.cfg
chapter1/: ansible.cfg  inventory.ini
chapter2/: Vagrantfile  playbook.yml
chapter7/00-galaxy/: main.yml
chapter7/01-debug/: debug.yml
chapter7/02-fail-assert/: fail-assert.yml
chapter7/04-syntax-check/: syntax-check.yml
chapter7/06-molecule-role/myrole/meta/: main.yml
episode-8/01-molecule-playbook/: main.yml
nodejs/: Vagrantfile  main.yml
nodejs/app/: app.js
notes/: 00-environment-setup.md  01-intro.md  02-adhoc-commands.md  03-advanced-adhoc-and-playbooks.md  04-handlers-vars-and-environment.md  05-vault-and-roles.md  06-molecule-testing-and-galaxy.md  08-molecule-playbooks.md
playbooks/: apache.yml  playbook.yml
playbooks/files/: test.conf
playbooks/tasks/: apache.yml
vault/: Vagrantfile  ansible.cfg  main.yml
(+2 files in other folders)
