[project]
name = "learn-ansible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.7.0",
    "molecule>=26.4.0",
    "molecule-plugins[docker]>=25.8.12",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.4.0",
    "yamllint>=1.38.0",
]
